media/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: media
  name: media-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: media.192.168.1.120.nip.io
    http:
      paths:
        - backend:
            serviceName: transmission-transmission-openvpn
            servicePort: 80
          path: /transmission
        - backend:
            serviceName: sonarr
            servicePort: 80
          path: /sonarr
        - backend:
            serviceName: jackett
            servicePort: 80
          path: /jackett
        - backend:
            serviceName: radarr
            servicePort: 80
          path: /radarr
        - backend:
            serviceName: "plex-kube-plex"
            servicePort: 32400
          path: "/"
